<resources>
    <string name="app_name">RTES</string>
    <string name="Dashboard">TextView</string>
    <string name="dashboard">Dashboard</string>
    <string name="tracking_your_bus_made_easier">Tracking your Bus made easier!</string>
    <string name="cancelled_buses">Cancelled Buses</string>
    <string name="spot_your_bus">Spot Your Bus</string>
    <string name="bus_schedule">Bus Schedule</string>
    <string name="rescheduled_buses">Rescheduled Buses</string>
    <string name="todo">TODO</string>
    <string name="portal">----------- PORTAL -----------</string>
    <string name="logo">logo</string>
    <string name="logo_1">logo</string>
    <string name="live_bus_stand">Live Bus Stand</string>
    <string name="diverted_buses">Diverted Buses</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="notices">Notices</string>
    <string name="my_tickets">My Tickets</string>
    <string name="bus_number">Bus Number</string>
    <string name="cantt">Cantt</string>
    <string name="from">From :</string>
    <string name="check">Check</string>
    <string name="ordinary_mini_bus">Ordinary Mini Bus</string>
    <string name="bus_type">Bus Type :</string>
    <string name="lanka">Lanka</string>
    <string name="to">To :</string>
    <string name="spot">Spot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_map">Live Map</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="durgakund">Durgakund</string>
</resources>