<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/dashboard"
            android:textColor="#251010"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="34dp"
            android:layout_height="6.6dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/dash_bar"
            android:foregroundGravity="center">

        </View>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="22dp"
        android:elevation="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bus_bg"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="128dp"
                android:fontFamily="@font/alatsi"
                android:gravity="bottom|center"
                android:text="@string/tracking_your_bus_made_easier"
                android:textColor="#370549"
                android:textSize="16.1sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/portal"
        android:textColor="#810F0F"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contextClickable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            tools:ignore="DuplicateClickableBoundsCheck">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient_1"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/spot_your_bus"
                    android:textColor="#473A3A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/spotbus_logo"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            tools:ignore="DuplicateClickableBoundsCheck">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient_1"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/live_bus_stand"
                    android:textColor="#473A3A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/busstand_logo" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/busScheduleCV"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            tools:ignore="DuplicateClickableBoundsCheck">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient_1"
                android:clickable="false"
                android:contextClickable="false"
                android:focusable="true"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/bus_schedule"
                    android:textColor="#473A3A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="75dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/logo_1"
                    android:src="@drawable/bus_schedule_logo"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@drawable/button_gradient_1"
                android:clickable="true"
                android:contextClickable="true"
                android:padding="8dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/notices"
                    android:textColor="#473A3A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/cancel_logo"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient_1"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:paddingStart="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/book_tickets"
                    android:textColor="#473A3A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="102dp"
                    android:layout_height="63dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="11dp"
                    android:contentDescription="@string/logo"
                    android:foregroundGravity="right"
                    android:src="@drawable/qr"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient_1"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:paddingStart="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/my_tickets"
                    android:textColor="#473A3A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="108dp"
                    android:layout_height="75dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="-1dp"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ticket"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>




</LinearLayout>